# videoplatform

./: AI_ASSISTANT.md  README.md  SECURITY_IMPROVEMENTS.md  docker-compose.yml  main.py  service.sh  start.sh  test_video_refresh.py  部署说明.md
backend/: .env  Dockerfile  config.py  generate_covers.py  init_db.py  migrate_user_id.py  missav_debug.html  pyproject.toml  requirements.txt  revert_user_id.py  run.py  seed_videos.py  test_video_refresh.py  update_video_covers.py
backend/alembic/: env.py
backend/alembic/versions/: 016b8b91a168_auto.py  081ff56366e2_auto.py  0dacb97bbac7_auto.py  130e9292efca_auto.py  2c6b443ebd91_auto.py  32971c74efbf_auto.py  3ba3fd59d76f_init.py  468862aec6c1_auto.py  4a8cd19b1512_auto.py  54088c199ec5_add_follows_table.py  54fc27223ba6_auto.py  5b3953f9fd5b_auto.py  5d38eacec367_auto.py  6ead28e35d3e_auto.py  7c1b233b4223_auto.py  8669ce4bbca8_auto.py  8acfbd9d0630_auto.py  94fb8232555e_auto.py  a2fddbd59646_auto.py  aa581047c308_auto.py  ab29efa83dd4_auto.py  b0bcfcc3c918_add_unique_constraints_trgm_indexes_.py  bea6be0848df_auto.py  ccec5dac41e5_auto.py  cfb443d7a7d6_auto.py  d096c0e0c047_auto.py  d0eb10349ed3_auto.py  d8a0f1a37c5f_auto.py  d9b69a005d8a_auto.py  ed21d1025c43_auto.py  face4628685d_auto.py
backend/app/: __init__.py  ai_agent.py  database.py  deps.py  logger.py  models.py  models.py.bak  system_map.py  tasks.py  video_analysis.py
backend/database/: videoplatform.db  videoplatform.db-shm  videoplatform.db-wal
backend/lib/: api-types.ts
backend/tests/: conftest.py  test_auth.py  test_health.py  test_video.py
(+142 files in other folders)
