[project]
name = "videoplatform"
version = "0.1.0"
description = "Video platform backend API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.14.1",
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.0",
    "sqlalchemy[asyncio]==2.0.40",
    "asyncpg==0.30.0",
    "bcrypt==5.0.0",
    "python-jose[cryptography]==3.3.0",
    "pydantic-settings==2.9.1",
    "aiohttp==3.11.18",
    "aiofiles==24.1.0",
    "python-multipart==0.0.20",
    "yt-dlp==2026.3.17",
    "slowapi==0.1.9",
    "structlog==24.4.0",
    "resend==2.7.0",
    "imageio-ffmpeg>=0.6.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]


